[package]
name = "cpack"
author = "cr0a3"
description = "Simple package manager for the c++ language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
PrintLib = "1.5.1"
arg = "0.4.1"
serde = { version = "1.0.197", features=["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
zip = "0.6.6"
