[package]
name = "quill"
author = "cr0a3"
description = "Package manager for the c++ language"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
PrintLib = "1.5.1"
copy_dir = "0.1.3"
reqwest = { version = "0.11.25", features=["json"] }
semver = "1.0.22"
serde = { version = "1.0.197", features=["derive"] }
serde_json = "1.0.114"
struct_iterable = "0.1.1"
tokio = { version = "1.36.0", features=["full"] }
toml = "0.8.10"
zip = "0.6.6"
